include(GetGitRevision)
GetGitRevision()
configure_file ("${PROJECT_SOURCE_DIR}/src/version.hpp.in"
                "${PROJECT_SOURCE_DIR}/src/version.hpp")
add_executable(plotgenerator plotgenerator.cpp sorter.cpp pyplot.cpp)
# target_link_libraries(plotgenerator ${Boost_LIBRARIES})
file(MAKE_DIRECTORY ../input)
file(MAKE_DIRECTORY ../meta)
file(MAKE_DIRECTORY ../output)
set(target_list "plotgenerator" ${target_list})
install(TARGETS plotgenerator DESTINATION .)
